Add 'make generate' results.

--- a/config/crd/bases/infrastructure.cluster.x-k8s.io_metal3machines.yaml
+++ b/config/crd/bases/infrastructure.cluster.x-k8s.io_metal3machines.yaml
@@ -100,6 +100,7 @@ spec:
                 properties:
                   checksum:
                     description: Checksum is a md5sum value or a URL to retrieve one.
+                      Not required for live-iso.
                     type: string
                   checksumType:
                     description: ChecksumType is the checksum algorithm for the image.
@@ -110,7 +111,7 @@ spec:
                     - sha512
                     type: string
                   format:
-                    description: DiskFormat contains the image disk format
+                    description: DiskFormat contains the image disk format.
                     enum:
                     - raw
                     - qcow2
@@ -334,6 +335,7 @@ spec:
                 properties:
                   checksum:
                     description: Checksum is a md5sum value or a URL to retrieve one.
+                      Not required for live-iso.
                     type: string
                   checksumType:
                     description: ChecksumType is the checksum algorithm for the image.
@@ -344,7 +346,7 @@ spec:
                     - sha512
                     type: string
                   format:
-                    description: DiskFormat contains the image disk format
+                    description: DiskFormat contains the image disk format.
                     enum:
                     - raw
                     - qcow2
