--- a/config/crd/bases/infrastructure.cluster.x-k8s.io_metal3machinetemplates.yaml
+++ b/config/crd/bases/infrastructure.cluster.x-k8s.io_metal3machinetemplates.yaml
@@ -92,7 +92,7 @@ spec:
                         properties:
                           checksum:
                             description: Checksum is a md5sum value or a URL to retrieve
-                              one. Not required for live-iso.
+                              one.
                             type: string
                           checksumType:
                             description: ChecksumType is the checksum algorithm for
@@ -103,18 +103,18 @@ spec:
                             - sha512
                             type: string
                           format:
-                            description: DiskFormat contains the image disk format.
+                            description: DiskFormat contains the image disk format
                             enum:
                             - raw
                             - qcow2
                             - vdi
                             - vmdk
-                            - live-iso
                             type: string
                           url:
                             description: URL is a location of an image to deploy.
                             type: string
                         required:
+                        - checksum
                         - url
                         type: object
                       providerID:
