--- a/config/crd/kustomization.yaml
+++ b/config/crd/kustomization.yaml
@@ -6,6 +6,7 @@ kind: Kustomization
 
 commonLabels:
   cluster.x-k8s.io/v1alpha3: v1alpha3_v1alpha4
+  cluster.x-k8s.io/v1alpha4: v1alpha5
 
 resources:
 - bases/infrastructure.cluster.x-k8s.io_metal3clusters.yaml
