--- a/config/crd/kustomization.yaml
+++ b/config/crd/kustomization.yaml
@@ -5,7 +5,7 @@ kind: Kustomization
 # It should be run by config/default
 
 commonLabels:
-  cluster.x-k8s.io/v1alpha3: v1alpha3_v1alpha4
+  cluster.x-k8s.io/v1alpha3: v1alpha4
   cluster.x-k8s.io/v1alpha4: v1alpha5
 
 resources:
