--- a/config/bmo/secrets.yaml
+++ b/config/bmo/secrets.yaml
@@ -1,4 +1,12 @@
 apiVersion: v1
+data:
+  tls.crt: ""
+kind: Secret
+metadata:
+   name: empty-ironic-cacert
+type: Opaque
+---
+apiVersion: v1
 stringData:
   password: ${IRONIC_PASSWORD:-""}
   username: ${IRONIC_USERNAME:-""}
