--- a/config/crd/bases/infrastructure.cluster.x-k8s.io_metal3machines.yaml
+++ b/config/crd/bases/infrastructure.cluster.x-k8s.io_metal3machines.yaml
@@ -61,6 +61,14 @@ spec:
           spec:
             description: Metal3MachineSpec defines the desired state of Metal3Machine
             properties:
+              automatedCleaningMode:
+                default: metadata
+                description: When set to disabled, automated cleaning of host disks
+                  will be skipped during provisioning and deprovisioning.
+                enum:
+                - metadata
+                - disabled
+                type: string
               dataTemplate:
                 description: MetadataTemplate is a reference to a Metal3DataTemplate
                   object containing a template of metadata to be rendered. Metadata
@@ -399,6 +407,14 @@ spec:
           spec:
             description: Metal3MachineSpec defines the desired state of Metal3Machine
             properties:
+              automatedCleaningMode:
+                default: metadata
+                description: When set to disabled, automated cleaning of host disks
+                  will be skipped during provisioning and deprovisioning.
+                enum:
+                - metadata
+                - disabled
+                type: string
               dataTemplate:
                 description: MetadataTemplate is a reference to a Metal3DataTemplate
                   object containing a template of metadata to be rendered. Metadata
