Add CAPI metadata.yaml to the e2e

--- a/test/e2e/config/e2e_conf.yaml
+++ b/test/e2e/config/e2e_conf.yaml
@@ -22,6 +22,8 @@ providers:
         # Use manifest from source files
         value: "https://github.com/kubernetes-sigs/cluster-api/releases/download/${CAPIRELEASE}/core-components.yaml"
         type: "url"
+        files:
+        - sourcePath: "../data/shared/v1alpha4/metadata.yaml"
         replacements:
           - old: "imagePullPolicy: Always"
             new: "imagePullPolicy: IfNotPresent"
@@ -34,6 +36,8 @@ providers:
         # Use manifest from source files
         value: "https://github.com/kubernetes-sigs/cluster-api/releases/download/${CAPIRELEASE}/bootstrap-components.yaml"
         type: "url"
+        files:
+        - sourcePath: "../data/shared/v1alpha4/metadata.yaml"
         replacements:
           - old: "imagePullPolicy: Always"
             new: "imagePullPolicy: IfNotPresent"
@@ -46,6 +50,8 @@ providers:
         # Use manifest from source files
         value: "https://github.com/kubernetes-sigs/cluster-api/releases/download/${CAPIRELEASE}/control-plane-components.yaml"
         type: "url"
+        files:
+        - sourcePath: "../data/shared/v1alpha4/metadata.yaml"
         replacements:
           - old: "imagePullPolicy: Always"
             new: "imagePullPolicy: IfNotPresent"
