--- a/test/e2e/config/e2e_conf.yaml
+++ b/test/e2e/config/e2e_conf.yaml
@@ -82,6 +82,9 @@ intervals:
   default/wait-delete-cluster: ["20m", "10s"]
   default/wait-machine-upgrade: ["50m", "10s"]
   default/wait-machine-remediation: ["30m", "10s"]
+  default/wait-vm-state: ["10m", "100ms"]
+  default/monitor-vm-state: ["1m", "500ms"]
+  default/monitor-provisioning: ["5m", "500ms"]
   default/wait-deployment: ["10m", "10s"]
   default/wait-job: ["10m", "10s"]
   default/wait-service: ["10m", "10s"]
