--- a/test/e2e/config/e2e_conf.yaml
+++ b/test/e2e/config/e2e_conf.yaml
@@ -82,6 +82,8 @@ intervals:
   default/wait-delete-cluster: ["20m", "10s"]
   default/wait-machine-upgrade: ["50m", "10s"]
   default/wait-machine-remediation: ["30m", "10s"]
-  default/wait-deployment: ["5m", "10s"]
-  default/wait-job: ["5m", "10s"]
-  default/wait-service: ["3m", "10s"]
+  default/wait-deployment: ["10m", "10s"]
+  default/wait-job: ["10m", "10s"]
+  default/wait-service: ["10m", "10s"]
+  default/wait-object-provisioned: ["10m", "10s"]
+  default/wait-machine-running: ["10m", "10s"]
