Add cert-rotation e2e test
Add some check to ensure that pivoting is successful

Use go.mod and go.sum from master


Fix golint error


Fix go dependency 


More fix on Go dependency


Fix


Temporary disable log


The rest of pivoting test now can run


fix


Fix `clusterctl init` without checking all deployments running


Fix the lint problem


Force update on the BMO repo


Change order


No longer getting stuck


Make pivoting become a step


Fix golint error


Fix


Fix


fix


fix


Install BMO in v1alpha5


Fix


Add labels to BMO CRDs in v1alpha5


fix


fix


Pass the CI


Remove the use of variables in the config file


Fix undeclared variables


Fix


Fix


Fix to pass the unit and lint test


Address comments


Add certificate rotation e2e test


Temporarily comment the log


Fix


Fix2


Fix 3


Fix 3


fix 4


Fix 5


Fix 6


Fix 7


Fix 8


fix 9

--- a/test/e2e/config/e2e_conf.yaml
+++ b/test/e2e/config/e2e_conf.yaml
@@ -87,3 +87,4 @@ intervals:
   default/wait-service: ["10m", "10s"]
   default/wait-object-provisioned: ["10m", "10s"]
   default/wait-machine-running: ["10m", "10s"]
+  default/wait-pod-restart: ["4m", "10s"]
