Add AGE column to metal3 CRDs
This adds the AGE column to all our CRDs to make the printed output consistent with the built in K8s resources.

Keeping things consistent with CAPI# https://github.com/kubernetes-sigs/cluster-api/pull/5180

--- a/config/crd/bases/infrastructure.cluster.x-k8s.io_metal3clusters.yaml
+++ b/config/crd/bases/infrastructure.cluster.x-k8s.io_metal3clusters.yaml
@@ -111,6 +111,10 @@ spec:
     subresources:
       status: {}
   - additionalPrinterColumns:
+    - description: Time duration since creation of Metal3Cluster
+      jsonPath: .metadata.creationTimestamp
+      name: Age
+      type: date
     - description: metal3Cluster is Ready
       jsonPath: .status.ready
       name: Ready
