--- a/config/crd/bases/infrastructure.cluster.x-k8s.io_metal3dataclaims.yaml
+++ b/config/crd/bases/infrastructure.cluster.x-k8s.io_metal3dataclaims.yaml
@@ -132,7 +132,12 @@ spec:
     storage: false
     subresources:
       status: {}
-  - name: v1alpha5
+  - additionalPrinterColumns:
+    - description: Time duration since creation of Metal3DataClaim
+      jsonPath: .metadata.creationTimestamp
+      name: Age
+      type: date
+    name: v1alpha5
     schema:
       openAPIV3Schema:
         description: Metal3DataClaim is the Schema for the metal3datas API
