--- a/config/crd/bases/infrastructure.cluster.x-k8s.io_metal3machinetemplates.yaml
+++ b/config/crd/bases/infrastructure.cluster.x-k8s.io_metal3machinetemplates.yaml
@@ -227,7 +227,12 @@ spec:
         type: object
     served: true
     storage: false
-  - name: v1alpha5
+  - additionalPrinterColumns:
+    - description: Time duration since creation of Metal3MachineTemplate
+      jsonPath: .metadata.creationTimestamp
+      name: Age
+      type: date
+    name: v1alpha5
     schema:
       openAPIV3Schema:
         description: Metal3MachineTemplate is the Schema for the metal3machinetemplates
@@ -430,6 +435,7 @@ spec:
         type: object
     served: true
     storage: true
+    subresources: {}
 status:
   acceptedNames:
     kind: ""
