Fix the e2e issues related to the uplift k8s to v1.22 .0
This commits solves two issues:
-  Removing unnecessary RunAsGroup=true field to keep up a consistency with m3-dev-env templates
 - Adding a workaround for nameprefix issue in IPAM kustomization
Co-authored-by: furkatgofurov7 <furkat.gofurov@est.tech>

--- a/templates/test/cluster-template-prow-ha-centos.yaml
+++ b/templates/test/cluster-template-prow-ha-centos.yaml
@@ -77,7 +77,7 @@ spec:
           cgroup-driver: systemd
           container-runtime: remote
           container-runtime-endpoint: unix:///var/run/crio/crio.sock
-          feature-gates: AllAlpha=false,RunAsGroup=true
+          feature-gates: AllAlpha=false
           node-labels: metal3.io/uuid={{ ds.meta_data.uuid }}
           provider-id: metal3://{{ ds.meta_data.uuid }}
           runtime-request-timeout: 5m
@@ -88,7 +88,7 @@ spec:
           cgroup-driver: systemd
           container-runtime: remote
           container-runtime-endpoint: unix:///var/run/crio/crio.sock
-          feature-gates: AllAlpha=false,RunAsGroup=true
+          feature-gates: AllAlpha=false
           node-labels: metal3.io/uuid={{ ds.meta_data.uuid }}
           provider-id: metal3://{{ ds.meta_data.uuid }}
           runtime-request-timeout: 5m
@@ -459,7 +459,7 @@ spec:
             cgroup-driver: systemd
             container-runtime: remote
             container-runtime-endpoint: unix:///var/run/crio/crio.sock
-            feature-gates: AllAlpha=false,RunAsGroup=true
+            feature-gates: AllAlpha=false
             node-labels: metal3.io/uuid={{ ds.meta_data.uuid }}
             provider-id: metal3://{{ ds.meta_data.uuid }}
             runtime-request-timeout: 5m
