--- a/templates/test/cluster-template-prow-ha.yaml
+++ b/templates/test/cluster-template-prow-ha.yaml
@@ -152,7 +152,7 @@ spec:
           cgroup-driver: systemd
           container-runtime: remote
           container-runtime-endpoint: unix:///var/run/crio/crio.sock
-          feature-gates: AllAlpha=false,RunAsGroup=true
+          feature-gates: AllAlpha=false
           node-labels: metal3.io/uuid={{ ds.meta_data.uuid }}
           provider-id: metal3://{{ ds.meta_data.uuid }}
           runtime-request-timeout: 5m
@@ -164,7 +164,7 @@ spec:
           cgroup-driver: systemd
           container-runtime: remote
           container-runtime-endpoint: unix:///var/run/crio/crio.sock
-          feature-gates: AllAlpha=false,RunAsGroup=true
+          feature-gates: AllAlpha=false
           node-labels: metal3.io/uuid={{ ds.meta_data.uuid }}
           provider-id: metal3://{{ ds.meta_data.uuid }}
           runtime-request-timeout: 5m
@@ -384,7 +384,7 @@ spec:
             cgroup-driver: systemd
             container-runtime: remote
             container-runtime-endpoint: unix:///var/run/crio/crio.sock
-            feature-gates: AllAlpha=false,RunAsGroup=true
+            feature-gates: AllAlpha=false
             node-labels: metal3.io/uuid={{ ds.meta_data.uuid }}
             provider-id: metal3://{{ ds.meta_data.uuid }}
             runtime-request-timeout: 5m
