Make m3-dev-env builds the infrastructure components using the local CAPM3

--- a/test/e2e/config/e2e_conf.yaml
+++ b/test/e2e/config/e2e_conf.yaml
@@ -61,7 +61,8 @@ providers:
     type: InfrastructureProvider
     versions:
     - name: ${CAPM3RELEASE}
-      value: "${PWD}/config/default"
+      value: "file://${HOME}/.cluster-api/overrides/infrastructure-metal3/${CAPM3RELEASE}/infrastructure-components.yaml"
+      type: "url"
     files:
     - sourcePath: "${PWD}/metadata.yaml"
       targetName: "metadata.yaml"
