--- a/config/bmo/kustomization.yaml
+++ b/config/bmo/kustomization.yaml
@@ -1,5 +1,8 @@
 apiVersion: kustomize.config.k8s.io/v1beta1
 kind: Kustomization
+
+namePrefix: capm3-
+
 namespace: capm3-system
 resources:
 - https://raw.githubusercontent.com/metal3-io/baremetal-operator/master/config/render/capm3.yaml
