Improve metal3cluster endpoint printing
Print endpoint as 10.10.10.10:1234 instead of
{"host":"192.168.111.249","port":6443}.

--- a/config/crd/bases/infrastructure.cluster.x-k8s.io_metal3clusters.yaml
+++ b/config/crd/bases/infrastructure.cluster.x-k8s.io_metal3clusters.yaml
@@ -128,7 +128,7 @@ spec:
       name: Cluster
       type: string
     - description: Control plane endpoint
-      jsonPath: .spec.controlPlaneEndpoint
+      jsonPath: .spec.controlPlaneEndpoint.host:.spec.controlPlaneEndpoint.port
       name: Endpoint
       type: string
     name: v1alpha5
