Add main branch references for CAPM3

--- a/examples/provider-components/image_versions_patch.yaml
+++ b/examples/provider-components/image_versions_patch.yaml
@@ -8,7 +8,7 @@ spec:
     spec:
       containers:
         - name: manager
-          image: gcr.io/k8s-staging-cluster-api/cluster-api-controller:master
+          image: gcr.io/k8s-staging-cluster-api/cluster-api-controller:main
 ---
 apiVersion: apps/v1
 kind: Deployment
@@ -20,7 +20,7 @@ spec:
     spec:
       containers:
         - name: manager
-          image: gcr.io/k8s-staging-cluster-api/kubeadm-bootstrap-controller:master
+          image: gcr.io/k8s-staging-cluster-api/kubeadm-bootstrap-controller:main
 ---
 apiVersion: apps/v1
 kind: Deployment
@@ -32,5 +32,5 @@ spec:
     spec:
       containers:
         - name: manager
-          image: gcr.io/k8s-staging-cluster-api/kubeadm-control-plane-controller:master
+          image: gcr.io/k8s-staging-cluster-api/kubeadm-control-plane-controller:main
 
