--- a/metadata.yaml
+++ b/metadata.yaml
@@ -3,7 +3,7 @@ kind: Metadata
 releaseSeries:
 - major: 1
   minor: 0
-  contract: v1alpha4
+  contract: v1beta1
 - major: 0
   minor: 5
   contract: v1alpha4
