--- a/config/webhook/manifests.yaml
+++ b/config/webhook/manifests.yaml
@@ -13,7 +13,7 @@ webhooks:
     service:
       name: webhook-service
       namespace: system
-      path: /mutate-infrastructure-cluster-x-k8s-io-v1alpha5-metal3cluster
+      path: /mutate-infrastructure-cluster-x-k8s-io-v1beta1-metal3cluster
   failurePolicy: Fail
   matchPolicy: Equivalent
   name: default.metal3cluster.infrastructure.cluster.x-k8s.io
@@ -21,7 +21,7 @@ webhooks:
   - apiGroups:
     - infrastructure.cluster.x-k8s.io
     apiVersions:
-    - v1alpha5
+    - v1beta1
     operations:
     - CREATE
     - UPDATE
@@ -35,7 +35,7 @@ webhooks:
     service:
       name: webhook-service
       namespace: system
-      path: /mutate-infrastructure-cluster-x-k8s-io-v1alpha5-metal3data
+      path: /mutate-infrastructure-cluster-x-k8s-io-v1beta1-metal3data
   failurePolicy: Fail
   matchPolicy: Equivalent
   name: default.metal3data.infrastructure.cluster.x-k8s.io
@@ -43,7 +43,7 @@ webhooks:
   - apiGroups:
     - infrastructure.cluster.x-k8s.io
     apiVersions:
-    - v1alpha5
+    - v1beta1
     operations:
     - CREATE
     - UPDATE
@@ -57,7 +57,7 @@ webhooks:
     service:
       name: webhook-service
       namespace: system
-      path: /mutate-infrastructure-cluster-x-k8s-io-v1alpha5-metal3dataclaim
+      path: /mutate-infrastructure-cluster-x-k8s-io-v1beta1-metal3dataclaim
   failurePolicy: Fail
   matchPolicy: Equivalent
   name: default.metal3dataclaim.infrastructure.cluster.x-k8s.io
@@ -65,7 +65,7 @@ webhooks:
   - apiGroups:
     - infrastructure.cluster.x-k8s.io
     apiVersions:
-    - v1alpha5
+    - v1beta1
     operations:
     - CREATE
     - UPDATE
@@ -79,7 +79,7 @@ webhooks:
     service:
       name: webhook-service
       namespace: system
-      path: /mutate-infrastructure-cluster-x-k8s-io-v1alpha5-metal3datatemplate
+      path: /mutate-infrastructure-cluster-x-k8s-io-v1beta1-metal3datatemplate
   failurePolicy: Fail
   matchPolicy: Equivalent
   name: default.metal3datatemplate.infrastructure.cluster.x-k8s.io
@@ -87,7 +87,7 @@ webhooks:
   - apiGroups:
     - infrastructure.cluster.x-k8s.io
     apiVersions:
-    - v1alpha5
+    - v1beta1
     operations:
     - CREATE
     - UPDATE
@@ -101,7 +101,7 @@ webhooks:
     service:
       name: webhook-service
       namespace: system
-      path: /mutate-infrastructure-cluster-x-k8s-io-v1alpha5-metal3machine
+      path: /mutate-infrastructure-cluster-x-k8s-io-v1beta1-metal3machine
   failurePolicy: Fail
   matchPolicy: Equivalent
   name: default.metal3machine.infrastructure.cluster.x-k8s.io
@@ -109,7 +109,7 @@ webhooks:
   - apiGroups:
     - infrastructure.cluster.x-k8s.io
     apiVersions:
-    - v1alpha5
+    - v1beta1
     operations:
     - CREATE
     - UPDATE
@@ -123,7 +123,7 @@ webhooks:
     service:
       name: webhook-service
       namespace: system
-      path: /mutate-infrastructure-cluster-x-k8s-io-v1alpha5-metal3machinetemplate
+      path: /mutate-infrastructure-cluster-x-k8s-io-v1beta1-metal3machinetemplate
   failurePolicy: Fail
   matchPolicy: Equivalent
   name: default.metal3machinetemplate.infrastructure.cluster.x-k8s.io
@@ -131,7 +131,7 @@ webhooks:
   - apiGroups:
     - infrastructure.cluster.x-k8s.io
     apiVersions:
-    - v1alpha5
+    - v1beta1
     operations:
     - CREATE
     - UPDATE
@@ -145,7 +145,7 @@ webhooks:
     service:
       name: webhook-service
       namespace: system
-      path: /mutate-infrastructure-cluster-x-k8s-io-v1alpha5-metal3remediation
+      path: /mutate-infrastructure-cluster-x-k8s-io-v1beta1-metal3remediation
   failurePolicy: Fail
   matchPolicy: Equivalent
   name: default.metal3remediation.infrastructure.cluster.x-k8s.io
@@ -153,7 +153,7 @@ webhooks:
   - apiGroups:
     - infrastructure.cluster.x-k8s.io
     apiVersions:
-    - v1alpha5
+    - v1beta1
     operations:
     - CREATE
     - UPDATE
@@ -167,7 +167,7 @@ webhooks:
     service:
       name: webhook-service
       namespace: system
-      path: /mutate-infrastructure-cluster-x-k8s-io-v1alpha5-metal3remediationtemplate
+      path: /mutate-infrastructure-cluster-x-k8s-io-v1beta1-metal3remediationtemplate
   failurePolicy: Fail
   matchPolicy: Equivalent
   name: default.metal3remediationtemplate.infrastructure.cluster.x-k8s.io
@@ -175,7 +175,7 @@ webhooks:
   - apiGroups:
     - infrastructure.cluster.x-k8s.io
     apiVersions:
-    - v1alpha5
+    - v1beta1
     operations:
     - CREATE
     - UPDATE
@@ -197,7 +197,7 @@ webhooks:
     service:
       name: webhook-service
       namespace: system
-      path: /validate-infrastructure-cluster-x-k8s-io-v1alpha5-metal3cluster
+      path: /validate-infrastructure-cluster-x-k8s-io-v1beta1-metal3cluster
   failurePolicy: Fail
   matchPolicy: Equivalent
   name: validation.metal3cluster.infrastructure.cluster.x-k8s.io
@@ -205,7 +205,7 @@ webhooks:
   - apiGroups:
     - infrastructure.cluster.x-k8s.io
     apiVersions:
-    - v1alpha5
+    - v1beta1
     operations:
     - CREATE
     - UPDATE
@@ -219,7 +219,7 @@ webhooks:
     service:
       name: webhook-service
       namespace: system
-      path: /validate-infrastructure-cluster-x-k8s-io-v1alpha5-metal3data
+      path: /validate-infrastructure-cluster-x-k8s-io-v1beta1-metal3data
   failurePolicy: Fail
   matchPolicy: Equivalent
   name: validation.metal3data.infrastructure.cluster.x-k8s.io
@@ -227,7 +227,7 @@ webhooks:
   - apiGroups:
     - infrastructure.cluster.x-k8s.io
     apiVersions:
-    - v1alpha5
+    - v1beta1
     operations:
     - CREATE
     - UPDATE
@@ -241,7 +241,7 @@ webhooks:
     service:
       name: webhook-service
       namespace: system
-      path: /validate-infrastructure-cluster-x-k8s-io-v1alpha5-metal3dataclaim
+      path: /validate-infrastructure-cluster-x-k8s-io-v1beta1-metal3dataclaim
   failurePolicy: Fail
   matchPolicy: Equivalent
   name: validation.metal3dataclaim.infrastructure.cluster.x-k8s.io
@@ -249,7 +249,7 @@ webhooks:
   - apiGroups:
     - infrastructure.cluster.x-k8s.io
     apiVersions:
-    - v1alpha5
+    - v1beta1
     operations:
     - CREATE
     - UPDATE
@@ -263,7 +263,7 @@ webhooks:
     service:
       name: webhook-service
       namespace: system
-      path: /validate-infrastructure-cluster-x-k8s-io-v1alpha5-metal3datatemplate
+      path: /validate-infrastructure-cluster-x-k8s-io-v1beta1-metal3datatemplate
   failurePolicy: Fail
   matchPolicy: Equivalent
   name: validation.metal3datatemplate.infrastructure.cluster.x-k8s.io
@@ -271,7 +271,7 @@ webhooks:
   - apiGroups:
     - infrastructure.cluster.x-k8s.io
     apiVersions:
-    - v1alpha5
+    - v1beta1
     operations:
     - CREATE
     - UPDATE
@@ -285,7 +285,7 @@ webhooks:
     service:
       name: webhook-service
       namespace: system
-      path: /validate-infrastructure-cluster-x-k8s-io-v1alpha5-metal3machine
+      path: /validate-infrastructure-cluster-x-k8s-io-v1beta1-metal3machine
   failurePolicy: Fail
   matchPolicy: Equivalent
   name: validation.metal3machine.infrastructure.cluster.x-k8s.io
@@ -293,7 +293,7 @@ webhooks:
   - apiGroups:
     - infrastructure.cluster.x-k8s.io
     apiVersions:
-    - v1alpha5
+    - v1beta1
     operations:
     - CREATE
     - UPDATE
@@ -307,7 +307,7 @@ webhooks:
     service:
       name: webhook-service
       namespace: system
-      path: /validate-infrastructure-cluster-x-k8s-io-v1alpha5-metal3machinetemplate
+      path: /validate-infrastructure-cluster-x-k8s-io-v1beta1-metal3machinetemplate
   failurePolicy: Fail
   matchPolicy: Equivalent
   name: validation.metal3machinetemplate.infrastructure.cluster.x-k8s.io
@@ -315,7 +315,7 @@ webhooks:
   - apiGroups:
     - infrastructure.cluster.x-k8s.io
     apiVersions:
-    - v1alpha5
+    - v1beta1
     operations:
     - CREATE
     - UPDATE
@@ -329,7 +329,7 @@ webhooks:
     service:
       name: webhook-service
       namespace: system
-      path: /validate-infrastructure-cluster-x-k8s-io-v1alpha5-metal3remediation
+      path: /validate-infrastructure-cluster-x-k8s-io-v1beta1-metal3remediation
   failurePolicy: Fail
   matchPolicy: Equivalent
   name: validation.metal3remediation.infrastructure.cluster.x-k8s.io
@@ -337,7 +337,7 @@ webhooks:
   - apiGroups:
     - infrastructure.cluster.x-k8s.io
     apiVersions:
-    - v1alpha5
+    - v1beta1
     operations:
     - CREATE
     - UPDATE
@@ -351,7 +351,7 @@ webhooks:
     service:
       name: webhook-service
       namespace: system
-      path: /validate-infrastructure-cluster-x-k8s-io-v1alpha5-metal3remediationtemplate
+      path: /validate-infrastructure-cluster-x-k8s-io-v1beta1-metal3remediationtemplate
   failurePolicy: Fail
   matchPolicy: Equivalent
   name: validation.metal3remediationtemplate.infrastructure.cluster.x-k8s.io
@@ -359,7 +359,7 @@ webhooks:
   - apiGroups:
     - infrastructure.cluster.x-k8s.io
     apiVersions:
-    - v1alpha5
+    - v1beta1
     operations:
     - CREATE
     - UPDATE
