--- a/test/e2e/config/e2e_conf.yaml
+++ b/test/e2e/config/e2e_conf.yaml
@@ -77,7 +77,7 @@ providers:
 
 variables:
   KUBERNETES_VERSION: "${KUBERNETES_VERSION}"
-  UPGRADED_K8S_VERSION: "v1.22.1"
+  UPGRADED_K8S_VERSION: "${UPGRADED_K8S_VERSION}"
   CNI: "./data/cni/calico/calico.yaml"
 
 intervals:
@@ -99,5 +99,5 @@ intervals:
   default/wait-bmh-available-provisioning: ["5m", "2s"]
   default/wait-machine-running: ["25m", "20s"]
   default/wait-bmh-provisioned: ["25m", "20s"]
-  default/wait-pod-restart: ["4m", "10s"]
+  default/wait-pod-restart: ["6m", "10s"]
 
