--- a/test/e2e/config/e2e_conf.yaml
+++ b/test/e2e/config/e2e_conf.yaml
@@ -77,7 +77,7 @@ providers:
 
 variables:
   KUBERNETES_VERSION: "${KUBERNETES_VERSION}"
-  UPGRADED_K8S_VERSION: "v1.22.1"
+  UPGRADED_K8S_VERSION: "${UPGRADED_K8S_VERSION}"
   CNI: "./data/cni/calico/calico.yaml"
   APIVersion: "infrastructure.cluster.x-k8s.io/v1alpha5"
 
@@ -96,12 +96,14 @@ intervals:
   default/wait-job: ["10m", "10s"]
   default/wait-service: ["10m", "10s"]
   default/wait-object-provisioned: ["10m", "10s"]
-  default/wait-bmh-available: ["25m", "20s"]
-  default/wait-bmh-deprovisioning: ["25m", "10s"]
+  default/wait-cp-available: ["50m", "30s"]
+  default/wait-bmh-deprovisioning: ["50m", "10s"]
+  default/wait-bmh-available: ["50m", "20s"]
   default/wait-machine-deleting: ["7m", "2s"]
-  default/wait-bmh-deprovisioning-ready: ["7m", "2s"]
+  default/wait-bmh-deprovisioning-available: ["7m", "2s"]
   default/wait-bmh-available-provisioning: ["5m", "2s"]
-  default/wait-machine-running: ["25m", "20s"]
-  default/wait-bmh-provisioned: ["25m", "20s"]
-  default/wait-pod-restart: ["4m", "10s"]
+  default/wait-machine-running: ["50m", "20s"]
+  default/wait-bmh-provisioned: ["50m", "20s"]
+  default/wait-pod-restart: ["6m", "10s"]
+  default/wait-patch: ["4m", "10s"]
 
