--- a/config/rbac/role.yaml
+++ b/config/rbac/role.yaml
@@ -97,6 +97,17 @@ rules:
   - list
   - watch
 - apiGroups:
+  - ""
+  resources:
+  - nodes
+  verbs:
+  - delete
+  - get
+  - list
+  - patch
+  - update
+  - watch
+- apiGroups:
   - infrastructure.cluster.x-k8s.io
   resources:
   - metal3clusters
