Add description for NoCloudProvider of metal3cluster resource
The description is visible with kubectl explain m3mcluster.spec.NoCloudProvider

--- a/config/crd/bases/infrastructure.cluster.x-k8s.io_metal3clusters.yaml
+++ b/config/crd/bases/infrastructure.cluster.x-k8s.io_metal3clusters.yaml
@@ -76,6 +76,11 @@ spec:
                 - port
                 type: object
               noCloudProvider:
+                description: Determines if the cluster is not to be deployed with
+                  an external cloud provider. If set to true, CAPM3 will use node
+                  labels to set providerID on the kubernetes nodes. If set to false,
+                  providerID is set on nodes by other entities and CAPM3 uses the
+                  value of the providerID on the m3m resource.
                 type: boolean
             required:
             - controlPlaneEndpoint
@@ -166,6 +171,11 @@ spec:
                 - port
                 type: object
               noCloudProvider:
+                description: Determines if the cluster is not to be deployed with
+                  an external cloud provider. If set to true, CAPM3 will use node
+                  labels to set providerID on the kubernetes nodes. If set to false,
+                  providerID is set on nodes by other entities and CAPM3 uses the
+                  value of the providerID on the m3m resource.
                 type: boolean
             required:
             - controlPlaneEndpoint
@@ -256,6 +266,11 @@ spec:
                 - port
                 type: object
               noCloudProvider:
+                description: Determines if the cluster is not to be deployed with
+                  an external cloud provider. If set to true, CAPM3 will use node
+                  labels to set providerID on the kubernetes nodes. If set to false,
+                  providerID is set on nodes by other entities and CAPM3 uses the
+                  value of the providerID on the m3m resource.
                 type: boolean
             type: object
           status:
