--- a/examples/cluster/kustomizeconfig.yaml
+++ b/examples/cluster/kustomizeconfig.yaml
@@ -1,6 +1,6 @@
 namespace:
 - kind: Cluster
   group: cluster.x-k8s.io
-  version: v1alpha4
+  version: v1beta1
   path: spec/infrastructureRef/namespace
   create: true
