--- a/examples/controlplane/controlplane.yaml
+++ b/examples/controlplane/controlplane.yaml
@@ -1,5 +1,5 @@
 kind: KubeadmControlPlane
-apiVersion: controlplane.cluster.x-k8s.io/v1alpha4
+apiVersion: controlplane.cluster.x-k8s.io/v1beta1
 metadata:
   name: ${CLUSTER_NAME}-controlplane
 spec:
@@ -7,7 +7,7 @@ spec:
     nodeDrainTimeout: ${NODE_DRAIN_TIMEOUT:-"0s"}
     infrastructureRef:
       kind: Metal3MachineTemplate
-      apiVersion: infrastructure.cluster.x-k8s.io/v1alpha5
+      apiVersion: infrastructure.cluster.x-k8s.io/v1beta1
       name: ${CLUSTER_NAME}-controlplane
       namespace: ${NAMESPACE}
   replicas: 3
@@ -36,7 +36,7 @@ spec:
         kubeletExtraArgs:
           cloud-provider: baremetal
 ---
-apiVersion: infrastructure.cluster.x-k8s.io/v1alpha5
+apiVersion: infrastructure.cluster.x-k8s.io/v1beta1
 kind: Metal3MachineTemplate
 metadata:
   name: ${CLUSTER_NAME}-controlplane
@@ -53,7 +53,7 @@ spec:
       dataTemplate:
         name: ${CLUSTER_NAME}-cp-metadata
 ---
-apiVersion: infrastructure.cluster.x-k8s.io/v1alpha5
+apiVersion: infrastructure.cluster.x-k8s.io/v1beta1
 kind: Metal3DataTemplate
 metadata:
   name: ${CLUSTER_NAME}-cp-metadata
