--- a/examples/controlplane/kustomizeconfig.yaml
+++ b/examples/controlplane/kustomizeconfig.yaml
@@ -1,12 +1,12 @@
 namespace:
 - kind: Machine
   group: cluster.x-k8s.io
-  version: v1alpha4
+  version: v1beta1
   path: spec/infrastructureRef/namespace
   create: true
 - kind: Machine
   group: cluster.x-k8s.io
-  version: v1alpha4
+  version: v1beta1
   path: spec/bootstrap/configRef/namespace
   create: true
 
