--- a/examples/machinedeployment/kustomizeconfig.yaml
+++ b/examples/machinedeployment/kustomizeconfig.yaml
@@ -1,11 +1,11 @@
 namespace:
 - kind: MachineDeployment
   group: cluster.x-k8s.io
-  version: v1alpha4
+  version: v1beta1
   path: spec/template/spec/infrastructureRef/namespace
   create: true
 - kind: MachineDeployment
   group: cluster.x-k8s.io
-  version: v1alpha4
+  version: v1beta1
   path: spec/template/spec/bootstrap/configRef/namespace
   create: true
